--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,7 +579,7 @@ footer ul li{
         width: 47%;
     }
     .hamburger{
-        display: block;
+        display: block!important;
     }
     
     .menu > ul{
