--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -600,7 +600,8 @@ footer ul li{
     }
     .section_header{
         width: 100%;
-        margin: 45px 0px 20px;
+        margin:0px;
+        padding: 50px 0px 30px
     }
     /* Banner */
     .headline{
@@ -664,6 +665,10 @@ footer ul li{
     .extra_miles img{
         width: 100%;
         margin-top: 40px;
+    }
+    .bmi .section_header{
+        width: 90%!important;
+        margin: auto;
     }
     
 
